--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=tourprojectuser
-DB_PASSWORD=ybl#FSF35df43kjh@65!
+DB_DATABASE=tourproject
+DB_USERNAME="tourprojectuser"
+DB_PASSWORD="ybl#FSF35df43kjh@65!"
 
 
 BROADCAST_DRIVER=log
