Mail Services Added

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Leopard_Holidays
 APP_ENV=local
 APP_KEY=base64:5sa+lJiyLAdDDt3CnQthpJQoAebiEt3NdAqt8NBPbRA=
 APP_DEBUG=true
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=tourproject
-DB_USERNAME="tourprojectuser"
-DB_PASSWORD="ybl#FSF35df43kjh@65!"
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,12 +23,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER="smtp"
+MAIL_HOST="smtp.gmail.com"
+MAIL_PORT=587
+MAIL_USERNAME="amoda29@gmail.com"
+MAIL_PASSWORD="kksjiugqjyiuixxs"
+MAIL_ENCRYPTION="tls"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
