--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=tourproject
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME="tourprojectuser"
+DB_PASSWORD="ybl#FSF35df43kjh@65!"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
